Fix layout issues

--- a/plugins/evaluation/public/evaluation.scss
+++ b/plugins/evaluation/public/evaluation.scss
@@ -11,7 +11,7 @@ $profile-thumb-size: 4*$base;
 
 /* Colors */
 
-$color-border: #C5AAA5;
+$color-text-area-border: #C5AAA5;
 
 
 .evaluation-mean {
@@ -66,7 +66,7 @@ $color-border: #C5AAA5;
       left: $border;
       border-style: solid;
       border-width: $arrow-size $arrow-size $arrow-size 0;
-      border-color: transparent $color-border transparent transparent;
+      border-color: transparent $color-text-area-border transparent transparent;
       .arrow {
         margin-left: $border;
         border-style: solid;
@@ -78,7 +78,7 @@ $color-border: #C5AAA5;
       left: -$border;
       border-style: solid;
       border-width: $arrow-size 0 $arrow-size $arrow-size;
-      border-color: transparent transparent transparent $color-border;
+      border-color: transparent transparent transparent $color-text-area-border;
       .arrow {
         margin-left: -($arrow-inner-size + $border);
         border-style: solid;
@@ -91,7 +91,7 @@ $color-border: #C5AAA5;
     float: left;
     width: $module4 + $intercolumn - $arrow-size;
     padding: $padding - $border;
-    border: $border solid $color-border;
+    border: $border solid $color-text-area-border;
 
     .evaluation-message {
       display: inline-block;
